worked on paper, adding a few pictures

--- a/report/main.tex
+++ b/report/main.tex
@@ -92,6 +92,10 @@
 
   Making a decision to use JavaScript as opposed to MATLAB depended upon numerous factors. While the project certaintly could have been completed with MATLAB, JavaScript, or even C++, there were numerous factors that made Javascript an attractive choice. The ability of the program to be run anywhere using only a web-enabled device was a huge advantage. In addition, having skills in creating web applications is very relevant in the tech economy of today; many software and hardware companies need web developers to develop their products or to provide secondary services that are associated with their hardware products. Internet of Things devices in particular make extensive use of web applications. It was thus decided that learning the use of JavaScript, Git, Node.js, and Webpack would prove invaluable skills in the marketplace. For this reason, the project was used as a learning experience for not only image processing, but the creation of web applications as well.
 
+  \subsection{Deployment}
+
+  To deploy the website, GitHub pages and Firebase Hosting were used. Since the website is statically generated, these two services were used to host the static files. The source code for the files can be found on the \href{https://github.com/jschmidtnj/imageprocessing}{github.com/jschmidtnj/imageprocessing} github page, along with instructions for compiling and developing locally. The code is well-documented, with everything needed to compile and deploy in the frontend-app directory. For viewing the report and its Latex source code, see the report directory. To compile the source code, webpack is used, which injects the dependencies from the node package manager into the html pages. It also minifies the javascript and css, and moves the files into the corresponding public folder directory. To run the compilation shell script, use "npm run build" in the frontend-app directory. Then run "npm run serve" to start a localhost of the website. Make sure to install the dependencies and add the config file before doing this, following the README.md file. The website is currently deployed at \href{https://facedetect.xyz/}{facedetect.xyz}, \href{https://image-face-detection.firebaseapp.com/}{image-face-detection.firebaseapp.com}, and \href{https://jschmidtnj.github.io/ImageProcessing/}{jschmidtnj.github.io/imageprocessing}.
+
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/main_page.png}
