--- a/report/main.tex
+++ b/report/main.tex
@@ -121,63 +121,70 @@
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/image_uploaded.png}
-    \caption{uploaded image}
+    \caption{Image Uploaded to Webpage}
     \label{fig:image-uploaded}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/grayscale.png}
-    \caption{grayscale}
+    \caption{Image Converted to Grayscale}
     \label{fig:grayscale}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/negative.png}
-    \caption{negative}
+    \caption{Negative of Original Image}
     \label{fig:negative}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/smoothing.png}
-    \caption{smoothing}
+    \caption{Smoothing Applied to Original Image}
     \label{fig:smoothing}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.75\textwidth]{assets/sharpened.png}
-    \caption{sharpening}
+    \includegraphics[width=0.75\textwidth]{assets/moon_original.png}
+    \caption{The Blurry Moon, Before Sharpening}
+    \label{fig:before-sharpening}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.75\textwidth]{assets/MoonAfterSharpening.png}
+    \caption{After Composite Laplacian Sharpening}
     \label{fig:sharpened}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/horizontal_line.png}
-    \caption{horizontal line input}
+    \caption{Horizontal Line Input}
     \label{fig:horizontal-line}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/horizontal_line_output.png}
-    \caption{horizontal line output}
+    \caption{Horizontal Lines, after Horizontal Line Detection}
     \label{fig:horizontal-line-output}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/original_points.png}
-    \caption{point detect input}
+    \caption{Point Detection Input}
     \label{fig:original-points}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.75\textwidth]{assets/point_detect.png}
-    \caption{point detect output}
+    \caption{Output of Point Detect Algorithm}
     \label{fig:point-detect-output}
   \end{figure}
 
